--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 <button onclick="searching()" id="search_button">Search</button>
 </center>
 
-</script>
+<script src="main.js"></script>
 </body>
 </html>
